--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -110,11 +110,11 @@ $color3: rgb(0, 104, 136);
         padding: 10px;
         width: 100px;
         position: absolute;
-        left: 92%;
-        top: 7%;
+        top: 3rem;
+        left: 90%;
         border: 1px solid;
         border-radius: 5px;
-        z-index: 1;
+        z-index: 1000;
 
         >div {
 
